--- a/src/style/static.scss
+++ b/src/style/static.scss
@@ -29,24 +29,30 @@ $background-color:rgb(223, 223, 223);
 }
 
 @mixin itemWrapper() {
-    width: inherit;
-    height: calc(100vh - 70px);
-    word-wrap: break-word;
-    overflow-y: scroll;
 
-    // スクロールバー(https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp)
-    ::-webkit-scrollbar {
-        width: 3px;
-    }
+    /* ▼画面サイズ（横幅）が600px以上の場合に適用 */
+    @media screen and (min-width: 600px) {
+        & {
+            width: inherit;
+            height: calc(100vh - 70px);
+            word-wrap: break-word;
+            overflow-y: scroll;
+        }
 
-    // バー部分
-    ::-webkit-scrollbar-thumb {
-        border-radius: 0;
-        background-color: $secondary-color;
-    }
+        // スクロールバー(https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp)
+        ::-webkit-scrollbar {
+            width: 3px;
+        }
 
-    // XとYの交差部分
-    ::-webkit-scrollbar-corner {
-        display: none;
+        // バー部分
+        ::-webkit-scrollbar-thumb {
+            border-radius: 0;
+            background-color: $secondary-color;
+        }
+
+        // XとYの交差部分
+        ::-webkit-scrollbar-corner {
+            display: none;
+        }
     }
 }
