--- a/src/component/Content/Content.module.scss
+++ b/src/component/Content/Content.module.scss
@@ -1,14 +1,28 @@
 @import "~/src/style/static.scss";
 
-
 .contentWrapper {
-    overflow: auto;
-    scroll-snap-type: y mandatory;
-    height: inherit;
+    // overflow: auto;
+    // scroll-snap-type: y mandatory;
+    // height: inherit;
     width: inherit;
+
     .content {
-        scroll-snap-align: start;
-        height: 100vh;
-        padding: 60px 10px 10px 10px; 
+        padding: 60px 10px 10px 10px;
+    }
+}
+
+/* ▼画面サイズ（横幅）が600px以上の場合に適用 */
+@media screen and (min-width: 600px) {
+    .contentWrapper {
+        overflow: auto;
+        scroll-snap-type: y mandatory;
+        height: inherit;
+        width: inherit;
+        -webkit-overflow-scrolling: touch; 
+    
+        .content {
+            height: 100vh;
+            scroll-snap-align: start;
+        }
     }
 }
