--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -14,6 +14,9 @@ button {
     color: $primary-color;
     border-width: 0;
     font-weight: 600;
+    * {
+        color: inherit
+    }
     @include hover();
 }
 
