--- a/src/component/Content/Top/Top.module.scss
+++ b/src/component/Content/Top/Top.module.scss
@@ -5,6 +5,8 @@
     text-align: center;
     display: block;
     word-wrap: break-word;
+    padding: 0 20px;
+    animation: fadeIn 5s ease 0s 1 normal;
 }
 
 $backgroundColor: rgba($primary-color, .7);
@@ -21,7 +23,9 @@ $backgroundColor: rgba($primary-color, .7);
     justify-content: center;
     /* 横方向中央揃え */
     height: calc(100vh - 70px);
+    background-color: rgba(149, 149, 149, 0.459);
     background-image: url('~/public/station_phone.png');
+    background-blend-mode: darken;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -33,7 +37,6 @@ $backgroundColor: rgba($primary-color, .7);
             @include txt(18px);
             background-color: $backgroundColor;
             box-shadow: 0px -5px 16px 4px $backgroundColor;
-
 
         }
 
@@ -55,12 +58,12 @@ $backgroundColor: rgba($primary-color, .7);
             padding: 0 20% 100px 0;
 
             .message {
-                @include txt(26px);
+                @include txt(40px);
 
             }
 
             .compLogo {
-                @include txt(36px);
+                @include txt(50px);
             }
         }
     }
