--- a/src/component/Util/SubjectTitle/SubjectTitle.module.scss
+++ b/src/component/Util/SubjectTitle/SubjectTitle.module.scss
@@ -4,13 +4,14 @@
 .title {
     font-size: 26px;
     text-align: center;
+    color: $secondary-color;
 
 }
 
 .underLine {
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 10px;
+    margin-bottom: 40px;
     border-radius: 3px;
     height: 2px;
     width: 150px;
