--- a/src/style/static.scss
+++ b/src/style/static.scss
@@ -1,18 +1,18 @@
 $primary-color: rgb(10, 20, 30);
 $secondary-color: rgb(108, 199, 168);
 $secondary-color-dark: rgb(56, 155, 122);
-$pick-up-txt: rgb(255, 221, 128);
+$pick-up-txt: rgb(236, 248, 123);
 $hands-up-txt: rgb(138, 138, 138);
 $background-color:rgb(223, 223, 223);
+$txt-color: rgb(223, 223, 223);
 
 // アニメーション名
 @keyframes fadeIn {
 
     // スタート
     0% {
-        opacity: .4
+        opacity: .0
     }
-
     // エンド
     100% {
         opacity: 1
@@ -37,6 +37,7 @@ $background-color:rgb(223, 223, 223);
             height: calc(100vh - 70px);
             word-wrap: break-word;
             overflow-y: scroll;
+            padding: 0 100px;
         }
 
         // スクロールバー(https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp)
