LPとしてりりース

--- a/src/component/Content/Introduction/Introduction.module.scss
+++ b/src/component/Content/Introduction/Introduction.module.scss
@@ -4,3 +4,17 @@
 .itemWrapper {
     @include itemWrapper();
 }
+
+/* ▼画面サイズ（横幅）が600px以上の場合に適用 */
+@media screen and (min-width: 600px) {
+    .itemWrapper {
+        padding: 0 150px 0 150px;
+    }
+}
+
+/* ▼画面サイズ（横幅）が1200px以上の場合に適用 */
+@media screen and (min-width: 1200px) {
+    .itemWrapper {
+        padding: 0 300px 0 300px;
+    }
+}
