--- a/src/component/Content/Template/TempItem/TempItem.module.scss
+++ b/src/component/Content/Template/TempItem/TempItem.module.scss
@@ -20,7 +20,7 @@
     .tempItem {
         width: inherit;
         height: 70%;
-        background-image: url('~/public/station.png');
+        background-image: url('~/public/station.jpg');
     }
 
     .itemNumber {
