--- a/src/component/Content/Top/Top.module.scss
+++ b/src/component/Content/Top/Top.module.scss
@@ -52,7 +52,7 @@ $backgroundColor: rgba($primary-color, .7);
 @media screen and (min-width: 600px) {
     .itemWrapper {
 
-        background-image: url('~/public/station.png');
+        background-image: url('~/public/station.jpg');
 
         .txtWrapper {
             padding: 0 20% 100px 0;
